Fix alignment

--- a/assignment-3/css/cart.css
+++ b/assignment-3/css/cart.css
@@ -10,6 +10,7 @@ td {
 }
 
 table {
+  margin-left: auto;
+  margin-right: auto;
   border: 2px outset;
-  width: 100%;
 }
