--- a/assignment-3/css/checkout.css
+++ b/assignment-3/css/checkout.css
@@ -29,3 +29,8 @@ img {
 input {
   width: 300px;
 }
+
+.product-image {
+  height: 80px;
+  width: 80px;
+}
